# ClickHouseCronMigrator

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Dockerfile  README.md  boost_install.sh  docker-compose.yml
config/: app.ini
libs/: CMakeLists.txt
src/: clickhouse_cron_manager.cpp  clickhouse_cron_manager.hpp  clickhouse_migrator.cpp  clickhouse_migrator.hpp  config_parser.cpp  config_parser.hpp  entrypoint.cpp
